@@ -11,6 +11,7 @@ from 2.5.2 to 2.5.3
   installed in non standard path and user did not provide coherent CPPFLAGS,
   LDFLAGS before calling ./configure
 - displaying CRC values when listing isolated catalogue using the XML format
+- fixing compilation issue when system does not provide strerror_r() call
 
 from 2.5.1 to 2.5.2
 - fixed bug met when permission is denied while reading or writing slices
